--- a/web/packages/workflows/i18n/common/en.json
+++ b/web/packages/workflows/i18n/common/en.json
@@ -250,8 +250,7 @@
           "DTMS": "Map mode",
           "ZDMS": "ReadOnly mode",
           "BJMS": "Edit mode",
-          "WBCSFGB": "There are still unsaved child nodes under this workflow. Do you want to close?",
-          "GGZLWBC": "This workflow has not been saved and there are still child nodes that have not been saved. Do you want to close it?",
+          "WBCSFGB": "There are still unsaved nodes under this workflow. Do you want to close?",
           "GBTS": "Close prompt",
           "QRGB": "Confirm close",
           "QX": "Cancel",
