--- a/web/packages/workflows/i18n/common/zh.json
+++ b/web/packages/workflows/i18n/common/zh.json
@@ -249,8 +249,7 @@
           "DTMS": "地图模式",
           "ZDMS": "只读模式",
           "BJMS": "编辑模式",
-          "WBCSFGB": "该工作流下还存在子节点未保存，是否关闭？",
-          "GGZLWBC": "该工作流未保存并且还存在子节点未保存，是否关闭？",
+          "WBCSFGB": "存在尚未保存的节点，是否关闭？",
           "GBTS": "关闭提示",
           "QRGB": "确认关闭",
           "QX": "取消",
