--- a/web/packages/shared/common/i18n/zh.json
+++ b/web/packages/shared/common/i18n/zh.json
@@ -361,6 +361,146 @@
         "waiting": "请等待接口返回！",
         "biLoading": "正在和Visualis系统通讯，请稍候！",
         "comingSoon": "尚未开源，敬请期待！"
+      },
+      "projectDetail": {
+        "WDGZL": "我的工作流",
+        "overTime": "超时",
+        "workflowRunFail": "工作流执行失败！",
+        "workflowRunSuccess": "工作流执行成功！",
+        "workflowRunCanceled": "工作流执行已取消！",
+        "workflowRunOvertime": "工作流执行超时！",
+        "workflowPublishOvertime": "工作流发布超时！",
+        "jumpRule": "只支持本工程的根工作流可跳转！",
+        "WCYDXM": "我参与的项目",
+        "SRMCSS": "请输入名称搜索",
+        "XJ": "新建",
+        "validateName": "名字不能包含当前工作空间名或用户名",
+        "editPermissions": "编辑权限",
+        "usersAllowedToEdit": "请选择可编辑用户",
+        "viewPermissions": "查看权限",
+        "usersAllowedToView": "请选择可查看用户",
+        "publishPermissions": "发布权限",
+        "userAllowedPublish": "请选择可发布用户",
+        "devProcess": "开发流程",
+        "orchestratorMode": "工作流模式",
+        "GZL": "工作流",
+        "HZXM": "合作项目",
+        "projectName": "项目名称",
+        "inputProjectName": "请输入项目名称",
+        "gotoScriptis": "进入Scriptis",
+        "createProject": "创建项目",
+        "editorProject": "修改项目",
+        "search": "搜索工程",
+        "deleteProject": "删除项目",
+        "confirmDeleteProject": "确认删除项目",
+        "enterName": "请输入名称",
+        "sortUpdateTime": "按修改时间排序",
+        "sortName": "按名称排序",
+        "product": "产品",
+        "selectProduct": "请选择产品",
+        "appArea": "应用领域",
+        "selectAppArea": "请选择应用领域",
+        "business": "业务",
+        "app": "应用",
+        "addBusiness": "新增业务",
+        "tips": "{app_name}介绍:\n{app_name}是微众银行开源自研的数据应用开发门户，基于Linkis数据中间件构建，轻松整合数据平台上层各应用组件，让数据应用开发变得简洁又易用。\n{app_name}作为一站式数据研发、可视化、数据治理和调度的数据应用开发门户，定位为闭环涵盖数据应用的全流程，满足从数据导入、数据清洗、数据加工、数据可视化展现、数据治理到数据输出的数据应用全生命周期开发场景。\n创建一个工程，开始您的数据应用开发之旅吧！",
+        "updteTime": "修改时间",
+        "nameUnrepeatable": "名称不可重复！",
+        "eidtorProjectSuccess": "修改项目{name}成功！",
+        "deleteTitle": "强制删除",
+        "projectCopy": "工程复制",
+        "projectPublish": "工程发布",
+        "projectVersion": "工程版本",
+        "projectDesc": "项目描述",
+        "pleaseInputProjectDesc": "请输入项目描述",
+        "name": "名称",
+        "projectClassify": "工程分类",
+        "nameLength": "名称长度不能大于",
+        "validNameDesc": "必须以字母开头，且只支持字母、数字、下划线和中文！",
+        "selectVersion": "请选择版本号",
+        "resourceUpload": "将文件拖到此处，或<em>点击上传</em>",
+        "fileExist": "文件已存在，请选择其它文件或选择其它文件夹！",
+        "uploadNameWar": "文件名称不合法，仅支持以字母、数字、中文、下划线、中短线且带后缀的命名！",
+        "uploadLimit": "上传文件不超过100M！",
+        "uploadSuccess": "文件{name}上传成功！",
+        "uploadOver": "文件大小超出限额！",
+        "resourceDeleteSuccess": "资源文件{name}已被成功删除！",
+        "copyNotice": "资源名称已复制至粘贴板",
+        "rollBack": "回滚",
+        "publishDetail": "发布详情",
+        "version": "版本",
+        "status": "状态",
+        "published": "已发布",
+        "unpublish": "未发布",
+        "updator": "发布者",
+        "comment": "版本注释",
+        "uptateTime": "更新时间",
+        "action": "操作",
+        "creator": "发布者",
+        "publishData": "发布信息",
+        "publishTime": "发布时间",
+        "pubDelete": "版本删除",
+        "confirmDelete": "确认删除工程版本{version}",
+        "addVersion": "新建版本",
+        "newVersion": "确认将{version}设为最新版本",
+        "init": "初始化",
+        "run": "运行",
+        "publishSuccess": "发布成功",
+        "publishFailed": "发布失败",
+        "infoTitle": "欢迎信息",
+        "noData": "暂无数据请添加",
+        "pleaseSelect": "请选择"
+      }
+    },
+    "workflow": {
+      "downloadTolocal": "下载成功，请到本地的download文件夹查看！",
+      "success": "成功",
+      "fail": "失败",
+      "createWorkflow": "创建工作流",
+      "editorWorkflow": "修改工作流",
+      "workflowName": "工作流名:",
+      "inputFlowName": "请输入工作流名",
+      "use": "用途",
+      "addUse": "新增用途",
+      "workflowDesc": "工作流描述:",
+      "inputWorkflowDesc": "请输入工作流描述",
+      "orchestratorMode": "请选择工作流模式",
+      "orchestratorWayString": "请选择工作流方式",
+      "desc": "描述",
+      "synchronousPublishing": "是否同步发布",
+      "historicalVersion": "历史版本",
+      "exportWorkflow": "工作流导出",
+      "ok": "确认",
+      "cancel": "取消",
+      "newCreate": "新建",
+      "failedNotice": "验证项未通过，请检查后再试！",
+      "enterName": "请输入名称",
+      "nameLength": "名称长度不能大于",
+      "validNameDesc": "必须以字母开头，且只支持字母、数字、下划线",
+      "nameRepeat": "名称不能重复",
+      "workflowItem": {
+        "publish": "发布",
+        "publishing": "发布中",
+        "resource": "资源",
+        "viewVersion": "查看版本",
+        "prop": "基础属性",
+        "move": "移动",
+        "config": "配置",
+        "action": "操作",
+        "readonly": "只读",
+        "readonlyTip": "只读模式，请勿修改",
+        "editor": "编辑",
+        "noDesc": "暂无描述",
+        "nodata": "暂无数据",
+        "noView": "发布中的工程，不允许查看！",
+        "lockTip": "正在被其他用户编辑，您暂时不能不能编辑！",
+        "lock": "已锁定",
+        "admin": "管理",
+        "rollback": "回滚",
+        "delete": "删除"
+      },
+      "publish": {
+        "cancel": "关闭"
       }
     }
   }
