--- a/web/packages/shared/common/i18n/en.json
+++ b/web/packages/shared/common/i18n/en.json
@@ -362,6 +362,145 @@
         "biLoading": "Connecting with Visualis, please hold on!",
         "comingSoon": "New version is being integrated, so stay tuned !",
         "GJZ": "Open source co-construction is in progress, so stay tuned!"
+      },
+      "projectDetail": {
+        "WDGZL": "My personal workflow",
+        "overTime": "Over Time",
+        "workflowRunFail": "Workflow run fail",
+        "workflowRunSuccess": "Workflow run success",
+        "workflowRunCanceled": "Workflow run canceled",
+        "workflowRunOvertime": "Workflow run overtime",
+        "workflowPublishOvertime": "Workflow publishing overtime",
+        "jumpRule": "Only root workflow jump is supported! ",
+        "WCYDXM": "My cooperative project",
+        "SRMCSS": "Please enter a name to seatch",
+        "XJ": "Add",
+        "validateName": "Name cannot contain current Workspace name and user name!",
+        "editPermissions": "Edit Permissions",
+        "usersAllowedToEdit": "Users Allowed To Edit",
+        "viewPermissions": "View Permissions",
+        "usersAllowedToView": "Users Allowed To View",
+        "publishPermissions": "Publish Permissions",
+        "userAllowedPublish": "Users Allowed To Publish",
+        "devProcess": "Development process",
+        "orchestratorMode": "Orchestrator mode",
+        "GZL": "Workflow",
+        "HZXM": "Projects",
+        "projectName": "Project Name",
+        "inputProjectName": "Input Project Name",
+        "gotoScriptis": "Visit Scriptis",
+        "createProject": "Create Project",
+        "editorProject": "Edit Project",
+        "search": "Search Project",
+        "deleteProject": "Delete Project",
+        "confirmDeleteProject": "Confirm to Delete Project",
+        "enterName": "Please enter the name",
+        "sortUpdateTime": "Order by Updated Time",
+        "sortName": "Order by Name",
+        "product": "Product",
+        "selectProduct": "Please choose a product",
+        "appArea": "Appplication Domain",
+        "selectAppArea": "Please choose an application domain",
+        "business": "Business",
+        "app": "Appplication",
+        "addBusiness": "New Business",
+        "tips": "{app_name} Introduction:\n{app_name} is a self-developed gateway for data application development of ctyun Luban. It is built on top of Linkis data middleware and easily integrates various applications/components on the upper-level of data platforms, making data application development easier and concise.\nAs a one-stop data application development gateway for data development, data visualization, data governance and scheduling, {app_name} is keen on covering the whole lifecycle of data application development, including scenarios of data importing, data cleansing, data visualization, data governance and data exporting. \n Create a project, and enjoy your journey of data application development! ",
+        "updteTime": "Updated At",
+        "nameUnrepeatable": "Duplicated name!",
+        "eidtorProjectSuccess": "Successfully updated project{name}!",
+        "deleteTitle": "Force delete",
+        "projectCopy": "Copy project",
+        "projectPublish": "Publish project",
+        "projectVersion": "Project version",
+        "projectDesc": "Project description",
+        "pleaseInputProjectDesc": "Please enter project description",
+        "name": "Name",
+        "projectClassify": "Project Category",
+        "nameLength": "The name length should not be greater than",
+        "validNameDesc": "Must start with alphabetic characters, followed by alphanumeric, underscore(_) and Chinese characters!",
+        "selectVersion": "Please choose a version",
+        "resourceUpload": "Drag file here, or <em>Click to Upload",
+        "fileExist": "File already exists, please choose other files or directories!",
+        "uploadNameWar": "Invalid file name, must be alphanumeric, underscore(_), hyphen(-) and Chinese characters and end by suffix!",
+        "uploadLimit": "File to upload cannot exceed 100M!",
+        "uploadSuccess": "Successfully uploaded file {name}!",
+        "uploadOver": "File size exceeds limit!",
+        "resourceDeleteSuccess": "Successfully deleted resource file {name}!",
+        "copyNotice": "Resource name copied to clipboard",
+        "rollBack": "Rollback",
+        "publishDetail": "Publish Details",
+        "version": "Version",
+        "status": "Status",
+        "published": "Published",
+        "unpublish": "Not Published",
+        "updator": "Published By",
+        "comment": "Version Comment",
+        "uptateTime": "Updated At",
+        "action": "Aciton",
+        "creator": "Published By",
+        "publishData": "Publish Info",
+        "publishTime": "Published At",
+        "pubDelete": "Delete Version",
+        "confirmDelete": "Confirm to delete project version {version}",
+        "addVersion": "New version",
+        "newVersion": "Confirm to set {version} as the latest version",
+        "init": "Init",
+        "run": "Run",
+        "publishSuccess": "Successfully published",
+        "publishFailed": "Publish failed",
+        "infoTitle": "Welcome",
+        "noData": "No data please add",
+        "pleaseSelect": "please select"
+      }
+    },
+    "workflow": {
+      "downloadTolocal": "Successfully downloaded, please check from local download directory!",
+      "success": "Success",
+      "fail": "Fail",
+      "createWorkflow": "Create workflow",
+      "editorWorkflow": "Edit workflow",
+      "workflowName": "Workflow name:",
+      "inputFlowName": "Please enter workflow name",
+      "use": "Usage",
+      "addUse": "New usage",
+      "workflowDesc": "Workflow description:",
+      "inputWorkflowDesc": "Please enter workflow description",
+      "orchestratorMode": "Please select orchestratorMode",
+      "orchestratorWayString": "Please select orchestratorWayString",
+      "desc": "Desc",
+      "historicalVersion": "Historical Version",
+      "synchronousPublishing": "Synchronous Publishing",
+      "exportWorkflow": "Export Workflow",
+      "ok": "OK",
+      "cancel": "Cancel",
+      "newCreate": "ADD",
+      "failedNotice": "Invalid items found, please check and then retry!",
+      "enterName": "Please enter the name",
+      "nameLength": "The name length should not be greater than",
+      "validNameDesc": "Must starts with alphabetic characters, followed by only alphanumeric, underscore and Chinese characters",
+      "nameRepeat": "name can not repeat",
+      "workflowItem": {
+        "publish": "Publish",
+        "publishing": "Publishing",
+        "resource": "Resource",
+        "viewVersion": "View verson",
+        "prop": "Base Info",
+        "move": "Move",
+        "config": "Config",
+        "action": "Action",
+        "readonly": "Read-only",
+        "readonlyTip": "Read-only mode, do not modify! ",
+        "editor": "Edit",
+        "noDesc": "No description",
+        "nodata": "No data",
+        "noView": "Cannot view a project being published!",
+        "lockTip": "It is being edited by other users. You cannot edit it temporarily!",
+        "lock": "Locking",
+        "admin": "Admin",
+        "delete": "Delete"
+      },
+      "publish": {
+        "cancel": "Cancel"
       }
     }
   }
