--- a/web/packages/shared/common/i18n/zh.json
+++ b/web/packages/shared/common/i18n/zh.json
@@ -195,6 +195,8 @@
         "DKYFJC": "打开语法检查",
         "GBKBTS": "关闭库表联想",
         "DKKBTS": "打开库表联想",
+        "DKZDHH": "自动换行",
+        "GBZDHH": "关闭自动换行",
         "GYFSYGWYF": "该语法属于高危语法，请谨慎操作！"
       },
       "resourceSimple": {
