node info cache after publish & fix bugs

--- a/web/packages/apiServices/i18n/en.json
+++ b/web/packages/apiServices/i18n/en.json
@@ -67,7 +67,7 @@
         "visibleRole": "Visible Role：",
         "test": "Test：",
         "applicant": "Applicant：",
-        "status": "Status：",
+        "status": "Status",
         "find": "Find",
         "path": "API Path：",
         "submitter": "Submitter",
