--- a/web/packages/scriptis/i18n/common/zh.json
+++ b/web/packages/scriptis/i18n/common/zh.json
@@ -499,6 +499,7 @@
           "db": {
             "copyName": "复制库名",
             "pasteName": "复制库名并粘贴至脚本",
+            "dbinfo": "查看库信息",
             "listSort": "表按时间排序",
             "liststringSort": "表按首字符排序"
           },
@@ -695,9 +696,7 @@
         "progress": "进度",
         "result": "运行结果",
         "log": "运行日志",
-        "history": "历史",
-        "diagnosis": "智能诊断",
-        "resourceInfo": "资源信息"
+        "history": "历史"
       },
       "notice": {
         "unsave": {
@@ -738,7 +737,117 @@
           "settingTitle": "命令行参数",
           "placeholder": "请使用空格分开多个参数"
         }
-      }
+      },
+      "Username": "用户名",
+      "downloadtime": "下载时间",
+      "reset": "重置",
+      "search": "搜索",
+      "Date": "日期",
+      "user": "用户",
+      "downloadpath": "下载路径",
+      "proxyuser": "当前代理用户：",
+      "notsaved": "正在编辑的代码未保存",
+      "check": "请先检查",
+      "confirmcheck": "点击确定去检查",
+      "cancelsave": "点击取消不保存",
+      "continue": "继续跳转",
+      "folder": "文件夹",
+      "view": "视图",
+      "table": "表",
+      "Partitionsize": "分区大小：",
+      "append": "追加",
+      "dbdetail": "库详情",
+      "Settings": "设置",
+      "proxytip": "请选择代理用户进入或者取消",
+      "applyporxy": "请先申请实名用户允许的代理用户",
+      "confirm": "确定",
+      "propmpt": "提示",
+      "largedatatip": "库表数据量较大可能导致编写脚本时卡顿，可在编辑器右键菜单选择关闭库表联想解决",
+      "hasopen": "存在已打开脚本不支持修改",
+      "upstreamTable": "上游暂存表",
+      "dbinfs": "库基本信息",
+      "tableifs": "库表信息",
+      "loadingwait": "数据加载中，请耐心等待",
+      "loading": "数据正在加载中",
+      "running": "运行提示",
+      "silent": "开始执行静默脚本",
+      "resultpropt": "执行结果提示",
+      "solution": "查看解决方案",
+      "reporterror": "上报错误",
+      "reported": "错误已上报",
+      "Permanent": "永久",
+      "validday": "当天有效",
+      "validweek": "一周有效",
+      "validmonth": "一月有效",
+      "validhalf": "半年有效",
+      "datastore": "原始数据层",
+      "warehouse": "明细数据层",
+      "warehouseservice": "汇总数据层",
+      "appservice": "应用数据层",
+      "writemany": "一次写多次读",
+      "curd": "增删改查",
+      "multoverride": "多次覆盖写",
+      "once": "一次写偶尔读",
+      "Metrics": "指标",
+      "Dimensions": "维度",
+      "Yes": "是",
+      "No": "否",
+      "Field": "字段",
+      "Name": "名称",
+      "Type": "类型",
+      "busst": "业务口径",
+      "calcst": "计算口径",
+      "Formula": "计算公式",
+      "Cancel": "取消",
+      "plsinputname": "请输入名称",
+      "lengthlimit": "输入超长",
+      "max": "最大长度",
+      "plsselect": "请选择",
+      "plsinputbusiness": "请输入业务口径",
+      "inputfield": "请输入字段",
+      "dbname": "库名",
+      "dbsize": "库大小",
+      "dbquota": "库配额",
+      "tablenum": "表数量",
+      "plstablename": "请输入表名",
+      "defaultsort": "默认排序",
+      "ordersize": "表大小排序",
+      "ordercreatetime": "创建时间排序",
+      "orderaccesstime": "访问时间排序",
+      "owntable": "我有权限的表",
+      "tablecreateby": "我创建的表",
+      "Search": "查询",
+      "copytbanme": "复制表名",
+      "batchdel": "批量删除",
+      "Serial": "序号",
+      "checkdelconfirm": "请再次勾选确认删除项",
+      "tablename": "表名",
+      "tbalias": "表别名",
+      "createtime": "创建时间",
+      "tablesize": "表大小",
+      "tbowner": "表属主",
+      "ispartition": "是否分区",
+      "compressformat": "压缩格式",
+      "lastaccess": "最近访问时间",
+      "lastupdate": "最近修改时间",
+      "selectdel": "请先选择删除项",
+      "createtime：": "创建时间：",
+      "nodata": "暂无数据",
+      "retry": "重试！",
+      "folderempty": "文件夹名称不得为空！",
+      "foldernameLen": "文件夹名称超过200字符！",
+      "foldernamestyle": "文件夹名称只支持大写、小写字母、数字、下划线和中文!",
+      "scriptNameEmpty": "脚本名称不得为空！",
+      "scriptPrefix": "脚本前缀名不得为空！",
+      "scriptSuffix": "后缀名不得为空！",
+      "illegal": "存在非法字符{str}！",
+      "Scriptprefix200 ": "脚本前缀名称超过200字符！",
+      "cannotmodify": "该脚本类型(后缀名)不得修改！",
+      "cancelfullscreen": "取消全屏",
+      "fullscreen": "全屏展示",
+      "fieldnamestyle": "字段名只支持大小写字母、数字和下划线",
+      "unableDel": "无法删除所有的字段！",
+      "scriptUsage": "脚本使用说明"
     }
   }
 }
