--- a/web/packages/shared/common/i18n/en.json
+++ b/web/packages/shared/common/i18n/en.json
@@ -452,7 +452,101 @@
         "infoTitle": "Welcome",
         "noData": "No data please add",
         "pleaseSelect": "please select"
-      }
+      },
+      "dss": {
+        "denied": "Access denied",
+        "copied": "Successfully copied",
+        "Username": "Username",
+        "Password": "Password",
+        "inputPassword": "Please input the password",
+        "Prompt": "Prompt",
+        "noPrompt": "Close the prompt",
+        "currentbrower": "Current browser version：",
+        "Recommend": "Recommend using",
+        "Version": "Version",
+        "guide": "Check the guide",
+        "contactadmin": "Please contact the administrator",
+        "errcode": "Error code：",
+        "errdesc": "Error description：",
+        "nolog": "No logs！",
+        "processing": "Data processing",
+        "amount": "Amount：",
+        "dochelp": "Documentation & Help",
+        "learning": "Learning guide",
+        "knowledge": "Knowledge base",
+        "homepage": "Home page",
+        "Search": "Search",
+        "faq": "FAQ",
+        "manual": "Visit user manual",
+        "uptime": "Update time：",
+        "dir": "Directory",
+        "notfound": "Not found",
+        "worklist": "Workspace list",
+        "fiveshortcut": "Only allowed to add five shortcut entries",
+        "allprod": "All products",
+        "dss": "DataSphere Studio (DSS for short) is WeDataSphere, a one-stop data application development management portal developed by WeBank.DataSphere Studio is positioned as a data application development portal, and the closed loop covers the entire process of data application development. With a unified UI, the workflow-like graphical drag-and-drop development experience meets the entire lifecycle of data application development from data import, desensitization cleaning, data analysis, data mining, quality inspection, visualization, scheduling to data output applications, etc.",
+        "nextoper": "Next, let us see the operation interface of the DataSphereStudio！",
+        "isee": "I see",
+        "isworkspacehome": "This is the main page of {app}，which is the workspace homepage.",
+        "skip": "Skip",
+        "nextstep": "Next",
+        "click": "Click",
+        "customemenu": "Custom function menus",
+        "globalfunmenu": ", Can support custom configuration global function menu",
+        "returnhome": ", Can return to workspace homepage",
+        "showall": "Show all",
+        "Workspace": "Workspace",
+        "switch": "Click to switch",
+        "homepage2": "Homepage",
+        "Account": "Account",
+        "switchandclear": ", Support switching accounts, clearing cache, changing skin.",
+        "helpcenter": "Help center",
+        "documentpage": ", Pop up help document. including the current page introduction, operation steps and frequently asked questions.",
+        "resource": "Resource manager",
+        "engineuse": ", Can display task, engine and resource usage.",
+        "tryclick": ", Please try to click it.",
+        "this": " This is",
+        "prevstep": "Previous",
+        "savetomenu": ", Click ★ next to the component to save it to menu and click × to undo it.",
+        "switchaccount": ", You can switch accounts, set languages, and change interface skins. Clearing the cache can clear the cached results of tasks run by the current user.",
+        "endintro": "The above is the introduction to the novice of {app}. In subsequent use,",
+        "anyquestion": "if you have any questions, please visit help document at any time.",
+        "vish": "Check out the help on the current page, I hope you all go well in the process of using it.",
+        "bugreport": "If you find any bugs or have questions that need to be reported to us, you are welcome to enter the User Feedback Center and leave your valuable comments."
+      },
+      "checkone": "Please check at least one field",
+      "scriptTask": "Script task",
+      "viewSolution": "Check solution",
+      "reporterr": "Report error",
+      "reported": "Error reported",
+      "resulttip": "Because your result set is large, for a better experience，",
+      "viewSet": "View result set",
+      "only500": "Only display 5000 rows of data",
+      "cancelFullScreen": "Cancel full screen",
+      "fullScreen": "Full screen",
+      "Failed": "Failed",
+      "Prompt": "Prompt",
+      "safetips": "Currently downloading data, which may involve sensitive data. Please ensure data security",
+      "Knowledge": "Knowledge base",
+      "manual": "User manual",
+      "guide": "UDF user guide",
+      "Help": "Help",
+      "Add": "Add",
+      "Cut": "Cut",
+      "copy": "copy",
+      "Method": "Method function",
+      "Function": "Function",
+      "User": "User-defined global variables",
+      "Task": "Task",
+      "Development": "Development center",
+      "Production": "Production center",
+      "No": "No data",
+      "Loading": "Loading",
+      "Please": "Please wait",
+      "AddTags": "Add tags",
+      "Search": "Search node：",
+      "Close": "Close",
+      "nodeNotFound": "Node not found"
     },
     "workflow": {
       "downloadTolocal": "Successfully downloaded, please check from local download directory!",
