--- a/web/packages/shared/common/i18n/zh.json
+++ b/web/packages/shared/common/i18n/zh.json
@@ -451,7 +451,101 @@
         "infoTitle": "欢迎信息",
         "noData": "暂无数据请添加",
         "pleaseSelect": "请选择"
-      }
+      },
+      "dss": {
+        "denied": "无权访问",
+        "copied": "复制成功",
+        "Username": "用户名",
+        "Password": "密码",
+        "inputPassword": "请输入密码",
+        "Prompt": "提示",
+        "noPrompt": "不再提示",
+        "currentbrower": "当前浏览器版本：",
+        "Recommend": "为了更好地体验推荐使用",
+        "Version": "版本",
+        "guide": "查看指引",
+        "contactadmin": "请联系管理员",
+        "errcode": "错误码：",
+        "errdesc": "错误描述：",
+        "nolog": "未获取到日志！",
+        "processing": "数据处理",
+        "amount": "数量：",
+        "dochelp": "帮助文档",
+        "learning": "学习引导",
+        "knowledge": "知识库",
+        "homepage": "文档首页",
+        "Search": "搜索",
+        "faq": "常见问题",
+        "manual": "前往用户手册",
+        "uptime": "更新时间：",
+        "dir": "文档目录",
+        "notfound": "没有找到您期望的内容",
+        "worklist": "工作空间列表",
+        "fiveshortcut": "目前只支持钉五个快捷入口",
+        "allprod": "全部产品",
+        "dss": "DataSphere Studio（简称 DSS）是微众银行自研的数据应用开发管理集成框架，以工作流式的图形化拖拽开发体验，将满足从数据交换、脱敏清洗、分析探索、质量检测、数据建模、可视化展现、邮件发送到定时调度等，数据应用开发全流程场景需求。",
+        "nextoper": "下面，让我们一起来熟悉一下DataSphereStudio的操作界面吧！",
+        "isee": "我知道了",
+        "isworkspacehome": "这是{isworkspacehome}的主页面，即工作空间首页。",
+        "skip": "跳过",
+        "nextstep": "下一步",
+        "click": "点击",
+        "customemenu": "自定义功能菜单",
+        "globalfunmenu": "，可支持自定义配置全局功能菜单",
+        "returnhome": "，可返回工作空间首页",
+        "showall": "鼠标悬浮显示所有",
+        "Workspace": "工作空间",
+        "switch": "，点击可切换",
+        "homepage2": "首页",
+        "Account": "账户设置",
+        "switchandclear": "，可切换账号、清理缓存、更换界面皮肤等。",
+        "helpcenter": "帮助中心",
+        "documentpage": "，可弹出帮助文档，包含当页介绍，操作步骤及常见问题。",
+        "resource": "资源管理器",
+        "engineuse": "，可显示任务，引擎及资源使用情况。",
+        "tryclick": "，请试着点击它。",
+        "this": " 这是",
+        "prevstep": "上一步",
+        "savetomenu": "，点击全部产品内，具体功能旁★号，可以收藏该功能至菜单。点击自定义菜单功能旁叉号，可以删除该收藏。",
+        "switchaccount": "，可切换账号，设置语言，更换界面皮肤等清理缓存，可以清理当前用户运行的任务缓存结果。",
+        "endintro": "以上就是{app}的新手介绍了，在后续的使用中，",
+        "anyquestion": "有任何问题，可以随时打开帮助文档，",
+        "vish": "查看当页的使用帮助，希望你在使用的过程中一切顺利。",
+        "bugreport": "如果你发现了任何bug或者有需要向我们反馈的问题，欢迎你进入用户反馈中心，留下你的宝贵意见。"
+      },
+      "checkone": "请至少勾选一个字段",
+      "scriptTask": "脚本任务",
+      "viewSolution": "查看解决方案",
+      "reporterr": "上报错误",
+      "reported": "错误已上报",
+      "resulttip": "因为您的结果集较大，为了更好的体验，",
+      "viewSet": "点击查看结果集",
+      "only500": "前端只展示5000条数据",
+      "cancelFullScreen": "取消全屏",
+      "fullScreen": "全屏展示",
+      "Failed": "失败",
+      "Prompt": "提示",
+      "safetips": "当前进行数据下载，可能涉及敏感数据，请保障数据的安全",
+      "Knowledge": "知识库",
+      "manual": "用户手册",
+      "guide": "自定义参数使用指引",
+      "Help": "使用帮助",
+      "Add": "添加",
+      "Cut": "剪切",
+      "copy": "复制",
+      "Method": "方法函数",
+      "Function": "函数",
+      "User": "用户自定义的全局变量",
+      "Task": "任务",
+      "Development": "开发中心",
+      "Production": "生产中心",
+      "No": "暂无数据",
+      "Loading": "加载中",
+      "Please": "请稍候",
+      "AddTags": "新增标签",
+      "Search": "搜索节点：",
+      "Close": "关闭",
+      "nodeNotFound": "未找到对应节点"
     },
     "workflow": {
       "downloadTolocal": "下载成功，请到本地的download文件夹查看！",
