--- a/web/packages/workflows/i18n/common/en.json
+++ b/web/packages/workflows/i18n/common/en.json
@@ -109,7 +109,8 @@
         "value": "value",
         "attributeName": "Please enter attribute name",
         "propertyValue": "Please enter value",
-        "search": "search"
+        "search": "search",
+        "comp": "Components"
       },
       "tabs": {
         "progress": "Progress",
@@ -385,7 +386,88 @@
         "cancel": "Cancel",
         "timeout": "Timeout on publishing orchestrator {name}!",
         "publishNotice": "Publishing will close the opened orchestrator, please save it!"
-      }
+      },
+      "CopyWrokflow": "Copy workflow",
+      "Original": "Original workflow",
+      "CopyProj": "Copy to project",
+      "Copied": "Copied workflow",
+      "Node": "Node suffix",
+      "WorkflowSameName": "Workflow nodes with same name in the same project will cause the workflow publishing failure. Please consider the node suffix name before filling in. If the publishing fails due to the same name problem, the user needs to manually modify the corresponding workflow node name. ",
+      "autosuffix": "Auto add suffix for nodes",
+      "Cancel": "Cancel",
+      "PleaseInputName": "Please input name",
+      "selcProj": "Please choose project",
+      "Copyreq": "Copy request sent successfully",
+      "Project": "Project",
+      "AllProj": "All projects",
+      "Individual": "Individual projects",
+      "ShareProj": "Share projects",
+      "Simultaneously": "Simultaneously delete all third-party system projects",
+      "Essential": "Essential attributes",
+      "CreateUser": "Create user",
+      "CreateTime": "Create time",
+      "LastModifyUser": "Last modified user",
+      "LastModifyTime": "Last modified time",
+      "Nopermission": "No ops permission",
+      "Configuration": "Configuration",
+      "Delete": "Delete",
+      "Copy": "Copy",
+      "Show": "Show version",
+      "Name：": "Name：",
+      "Description：": "Description：",
+      "Simplified": "Simplified Chinese",
+      "Loading": "Loading",
+      "wait": "Please wait",
+      "Streaming": "Streaming computing center operation steps",
+      "Import": "Import",
+      "confitEnv": "配置资源及生产环境",
+      "Configure": "Configure Flink parameters and run",
+      "Workflow": "Workflow",
+      "Scripttask": "Script task",
+      "SelectRun": "Select and run",
+      "Rerun": "Rerun",
+      "Prompt": "Prompt",
+      "Copying": "Copying",
+      "Notalledit": "Not allowed to edit the script",
+      "Save": "Save script",
+      "Manually": "Manually save",
+      "AddNode": "Add node",
+      "BatchDel": "Batch deletion of sub workflows is not supported！",
+      "PleaseSelectNode": "Please select the node to be executed",
+      "Saving": "Saving",
+      "request": "request sent",
+      "repeate": "Please do not click repeatedly",
+      "Scheduled": "Scheduled",
+      "Running": "Running",
+      "ExecuteSuccess": "Execute successfully",
+      "ExecuteFailed": "Execute failed",
+      "Skip": "Skip",
+      "Publishwork": "Publish workflow",
+      "Export": "Export",
+      "General": "General settings",
+      "Addworkflow": "Add workflow",
+      "Success": "Success",
+      "Development": "Development center",
+      "Noopen": "No open workflow, Click the button below to add",
+      "Add": "Add project",
+      "Recent": "Recent",
+      "Createworkflow": "Create workflow",
+      "CancelFullScreen": "Cancel full screen",
+      "Full": "Full screen",
+      "Log": "Log",
+      "Fold": "Fold",
+      "workflowcat": "workflow category",
+      "Create": "Create",
+      "Edit": "Edit",
+      "WorkflowCategory": "Workflow category:",
+      "inputCategory": "Please input workflow category",
+      "Myworkflow": "My workflow",
+      "WorkflowMy": "Workflow I participate in",
+      "workflowdesc": "workflow category description:",
+      "Confirm": "Confirm",
+      "namelength": "Length of name cannot be longer than {num}",
+      "inputStyle": "Must start with a letter or Chinese, and only accept letters, digits, underscores and Chinese！",
+      "Publishfailed": "Publish failed"
     },
     "orchestratorModes": {
       "menu": "Menu",
@@ -416,4 +498,3 @@
     }
   }
 }
-
