--- a/web/packages/workflows/i18n/common/zh.json
+++ b/web/packages/workflows/i18n/common/zh.json
@@ -109,7 +109,8 @@
         "value": "值",
         "attributeName": "请输入属性名",
         "propertyValue": "请输入属性值",
-        "search": "搜索"
+        "search": "搜索",
+        "comp": "组件"
       },
       "tabs": {
         "progress": "进度",
@@ -386,7 +387,88 @@
         "cancel": "关闭",
         "timeout": "工作流{name}发布超时！",
         "publishNotice": "发布将会关闭已打开的工作流，请注意保存！"
-      }
+      },
+      "CopyWrokflow": "复制工作流",
+      "Original": "被复制工作流",
+      "CopyProj": "复制到项目",
+      "Copied": "复制后工作流",
+      "Node": "节点后缀",
+      "WorkflowSameName": "同一项目中工作流节点重名会导致工作流发布失败，请考虑好节点后缀名再填写，若因重名问题导致发布失败，用户需手动修改对应工作流节点名称",
+      "autosuffix": "填写后将自动为工作流节点名添加该后缀",
+      "Cancel": "取消",
+      "PleaseInputName": "请输入名称",
+      "selcProj": "请选择项目",
+      "Copyreq": "复制请求发送成功",
+      "Project": "项目",
+      "AllProj": "所有项目",
+      "Individual": "个人项目",
+      "ShareProj": "共享项目",
+      "Simultaneously": "同步删除所有第三方系统的工程",
+      "Essential": "基础属性",
+      "CreateUser": "创建用户",
+      "CreateTime": "创建时间",
+      "LastModifyUser": "最近修改用户",
+      "LastModifyTime": "最近修改时间",
+      "Nopermission": "无运维权限",
+      "Configuration": "配置",
+      "Delete": "删除",
+      "Copy": "复制",
+      "Show": "查看版本",
+      "Name：": "名称：",
+      "Description：": "描述：",
+      "Simplified": "简体中文",
+      "Loading": "加载中",
+      "wait": "请稍后",
+      "Streaming": "流式计算中心操作步骤",
+      "Import": "导入",
+      "confitEnv": "配置资源及生产环境",
+      "Configure": "配置Flink参数并运行",
+      "Workflow": "工作流",
+      "Scripttask": "脚本任务",
+      "SelectRun": "选中执行",
+      "Rerun": "失败重跑",
+      "Prompt": "提示",
+      "Copying": "复制过程中",
+      "Notalledit": "不允许编辑工作流",
+      "Save": "保存脚本",
+      "Manually": "手动保存",
+      "AddNode": "新增节点",
+      "BatchDel": "子工作流不支持批量删除！",
+      "PleaseSelectNode": "请先选择需要执行的节点",
+      "Saving": "执行保存",
+      "request": "请求已发出",
+      "repeate": "请勿重复点击",
+      "Scheduled": "等待执行",
+      "Running": "执行中",
+      "ExecuteSuccess": "执行成功",
+      "ExecuteFailed": "执行失败",
+      "Skip": "跳过",
+      "Publishwork": "发布工作流",
+      "Export": "导出",
+      "General": "通用设置",
+      "Addworkflow": "添加工作流",
+      "Success": "操作成功",
+      "Development": "开发中心",
+      "Noopen": "无打开的工作流，可点击下方按钮添加",
+      "Add": "添加项目",
+      "Recent": "最近",
+      "Createworkflow": "新建工作流",
+      "CancelFullScreen": "取消全屏",
+      "Full": "全屏展示",
+      "Log": "日志",
+      "Fold": "收起",
+      "workflowcat": "工作流分类",
+      "Create": "新建",
+      "Edit": "修改",
+      "WorkflowCategory": "工作流分类名:",
+      "inputCategory": "请输入分类名",
+      "Myworkflow": "我的工作流",
+      "WorkflowMy": "我参与的工作流",
+      "workflowdesc": "工作流分类描述:",
+      "Confirm": "确认",
+      "numnamelength": "名称长度不能大于{num}",
+      "inputStyle": "必须以字母或中文开头，且只支持字母、数字、下划线和中文！",
+      "Publishfailed": "发布失败"
     },
     "orchestratorModes": {
       "menu": "菜单",
