--- a/web/packages/exts/open-source/i18n/en.json
+++ b/web/packages/exts/open-source/i18n/en.json
@@ -72,6 +72,23 @@
         },
         "tagPlaceholder": "tag，click enter add"
       }
+    },
+    "ext": {
+      "opensource": {
+        "selectservice": "Please select service",
+        "defalut": "Default value",
+        "detail": "Detailed description",
+        "longer1024": "No longer than 1024 characters！",
+        "rowlimit": "Too many rows, please query in batches！",
+        "outlimit": "Exceed the limit, please modify！！",
+        "cnanotnull": "Parameter cannot be null!",
+        "entercreate": "Tags, press enter to create",
+        "status": "Status",
+        "opreator": "Operator",
+        "copytime": "copy time",
+        "copyHistory": "Copy History",
+        "errmsg": "Error message"
+      }
     }
   }
 }
