--- a/web/packages/scriptis/i18n/common/en.json
+++ b/web/packages/scriptis/i18n/common/en.json
@@ -500,6 +500,7 @@
           "db": {
             "copyName": "Copy database name",
             "pasteName": "Copy database name & paste to script",
+            "dbinfo": "View database information",
             "listSort": "Sort by time",
             "liststringSort": "Sort by first character"
           },
@@ -696,9 +697,7 @@
         "progress": "Progress",
         "result": "Execution Result",
         "log": "Execution Log",
-        "history": "History",
-        "diagnosis": "Intelligent Diagnosis",
-        "resourceInfo": "Resource Info"
+        "history": "History"
       },
       "notice": {
         "unsave": {
@@ -739,7 +738,117 @@
           "settingTitle": "Command line Arguments",
           "placeholder": "Please use space to separate multiple arguments"
         }
-      }
+      },
+      "Username": "Username",
+      "downloadtime": "Download time",
+      "reset": "Reset",
+      "search": "Search",
+      "Date": "Date",
+      "user": "User",
+      "downloadpath": "Download path",
+      "proxyuser": "Current proxy user：",
+      "notsaved": "The code being edited is not saved",
+      "check": "Please check",
+      "confirmcheck": "Click confirm to check",
+      "cancelsave": "Click cancel without saving",
+      "continue": "Continue to jump",
+      "folder": "Folder",
+      "view": "View",
+      "table": "Table",
+      "Partitionsize": "Partition size：",
+      "append": "Append",
+      "dbdetail": "Database details",
+      "Settings": "Settings",
+      "proxytip": "Before entering, please select a proxy user or cancel",
+      "applyporxy": "Please apply for a proxy user first",
+      "confirm": "Confirm",
+      "propmpt": "Prompt",
+      "largedatatip": " When the number of tables is large, the browser may freeze when writing scripts. You can choose to turn off the code completion function in the right-click menu of the editor.",
+      "hasopen": "There is an open script that does not support modification",
+      "upstreamTable": "Upstream staging table",
+      "dbinfs": "Database information",
+      "tableifs": "Table information",
+      "loadingwait": "Loading, please wait",
+      "loading": "Loading",
+      "running": "Running prompt",
+      "silent": "Start to run silent script",
+      "resultpropt": "Execution result prompt",
+      "solution": "Check solution",
+      "reporterror": "Report error",
+      "reported": "Error reported",
+      "Permanent": "Permanent",
+      "validday": "Valid for today only",
+      "validweek": "Valid for one week",
+      "validmonth": "Valid for one month",
+      "validhalf": "Valid for six month",
+      "datastore": "Operation Data Store",
+      "warehouse": "Data Warehouse Details",
+      "warehouseservice": "Data Warehouse Service",
+      "appservice": "Application Data Service",
+      "writemany": "Write Once Read Many",
+      "curd": "CURD",
+      "multoverride": "Multiple override",
+      "once": "Write Once Read Occasionally",
+      "Metrics": "Metrics",
+      "Dimensions": "Dimensions",
+      "Yes": "Yes",
+      "No": "No",
+      "Field": "Field",
+      "Name": "Name",
+      "Type": "Type",
+      "busst": "Business standard",
+      "calcst": "Calculation standard",
+      "Formula": "Formula",
+      "Cancel": "Cancel",
+      "plsinputname": "Please input name",
+      "lengthlimit": "Out of length limit",
+      "max": "Maximum length",
+      "plsselect": "Please select",
+      "plsinputbusiness": "Please input business standard",
+      "inputfield": "Please input the field",
+      "dbname": "Database name",
+      "dbsize": "Database size",
+      "dbquota": "Database quota",
+      "tablenum": "Number of tables",
+      "plstablename": "Please input the table name",
+      "defaultsort": "Default sort order",
+      "ordersize": "Order by table size",
+      "ordercreatetime": "Order by create time",
+      "orderaccesstime": "Order by access time",
+      "owntable": "Tables I have access to",
+      "tablecreateby": "Tables I create",
+      "Search": "Search",
+      "copytbanme": "Copy table name",
+      "batchdel": "Batch deletion",
+      "Serial": "Serial number",
+      "checkdelconfirm": "Please check again to confirm deletion",
+      "tablename": "Table name",
+      "tbalias": "Table alias",
+      "createtime": "Create time",
+      "tablesize": "Table size",
+      "tbowner": "Table owner",
+      "ispartition": "Whether it is a partition table",
+      "compressformat": "Compressed format",
+      "lastaccess": "Last access time",
+      "lastupdate": "Last update time",
+      "selectdel": "Please select items to delete",
+      "createtime：": "Create time：",
+      "nodata": "No data",
+      "retry": "Please retry！",
+      "folderempty": "Folder name cannot be empty！",
+      "foldernameLen": "Folder name exceeds 200 characters！",
+      "foldernamestyle": "Folder names only accept uppercase,lowercase,digit,underscore and Chinese",
+      "scriptNameEmpty": "Script name cannot be empty！",
+      "scriptPrefix": "Script prefix name cannot be empty！",
+      "scriptSuffix": "Script suffix name cannot be empty！",
+      "illegal": "There are illegal characters {str}！",
+      "Scriptprefix200 ": "Script prefix name exceeds 200 characters！",
+      "cannotmodify": "The script type (suffix name) cannot be modified！",
+      "cancelfullscreen": "Cancel full screen",
+      "fullscreen": "Full screen",
+      "fieldnamestyle": "Filed names only accept uppercase, lowercase, digit and underscore",
+      "unableDel": "Unable to delete all fields！",
+      "scriptUsage": "Script usage instructions"
     }
   }
 }
