--- a/web/packages/workspace/i18n/en.json
+++ b/web/packages/workspace/i18n/en.json
@@ -72,7 +72,94 @@
       "feedback": "Feedback",
       "workspaceTitle": "WorkSpace——",
       "permissions": "Department & User management",
-      "managementPlatform":"Management Desk"
+      "managementPlatform": "Management Desk",
+      "Staytuned": "Stay tuned",
+      "Documents2": "Documents",
+      "Knowledge": "Knowledge base",
+      "DepAndUser": "Department and user management",
+      "Department": "Department management",
+      "UserManage": "User management",
+      "AddComp": "Add components",
+      "ComponentAccess": "Component access",
+      "UpdateSucc": "Update Successfully",
+      "Update": "Update failed",
+      "AddSucc": "Add successfully",
+      "AddFail": "Add failed",
+      "Management": "Management",
+      "All": "All projects",
+      "Individual": "Individual projects",
+      "Shared": "Shared projects",
+      "Deleted": "Deleted projects",
+      "Simultaneously": "Simultaneously delete all third-party system projects",
+      "Project": "Project",
+      "Not": "Not allowed to repeat",
+      "User": "User type",
+      "Real": "Real-name user",
+      "Non": "Non-real-name user",
+      "Operation": "Operation",
+      "CopySucc": "Copy request sent successfully",
+      "Prompt": "Prompt",
+      "Copying": "Copying",
+      "Pleasewait": "Please wait",
+      "Delete": "Delete",
+      "Configuration": "Config",
+      "Copy": "Copy",
+      "AccessCategories": "Access category",
+      "Component": "Component",
+      "ApplicationName": "Application name",
+      "ApplicationEnName": "Application english name",
+      "Homepage": "Home page",
+      "Projectpage": "Project page",
+      "Singleinter": "Single point interface",
+      "Activate": "Activate",
+      "Description": "Description",
+      "Pleaseinputdesc": "Please input description",
+      "Engilish": "Engilish description",
+      "Pleaseenputendesc": "Please input english description",
+      "Cancel": "Cancel",
+      "Submit": "Submit",
+      "Access": "Access category cannot be empty",
+      "AppnameEmpty": "Application name cannot be empty",
+      "ApplicationEnNameEmpty": "Application english name cannot be empty",
+      "Cannotempty": "Cannot be empty",
+      "Home": "Home page cannot be empty",
+      "ProjectEmpty": "Project page cannot be empty",
+      "DescriptionEmpty": "Description cannot be empty",
+      "EnDescEmpty": "English description cannot be empty",
+      "Savesucc": "Save successfully",
+      "Uploadfailed": "Upload failed",
+      "ListallNode": "List all nodes",
+      "readonly": "read only",
+      "Node": "Node",
+      "AddPage": "Add page",
+      "Documents": "Documents",
+      "docpathinput": "Please input the path of document，path must start with /",
+      "DocumentName": "Document name",
+      "inputdocName": "Please input document name",
+      "Document": "Document description",
+      "Path": "Path",
+      "NodeType": "Node type",
+      "Step": "Step",
+      "Problem": "Problem",
+      "Content": "Content title",
+      "inputTitle": "Please input title",
+      "Titlealias": "Title alias",
+      "Title": "Title prefix",
+      "Confirm": "Confirm",
+      "pathformat": "start with /, support English,Digit,Underscoreand slash",
+      "alreadyexist": "already exists",
+      "chooseNodeType": "Please choose node type",
+      "ConfirmDel": "Confirm to delete",
+      "Therecontents": "There are contents Cannot be deleted,",
+      "Edit": "Edit",
+      "Add": "Add",
+      "AddDir": "Add directory",
+      "DirectoryName": "Directory name",
+      "Please": "Please input directory name",
+      "Directory": "Directory",
+      "NodeTitle": "Node title",
+      "Cannot": "Cannot be deleted, there are contents in this directory",
+      "Console": "Console"
     },
     "workspaceManagement": {
       "waring": "Warning",
@@ -257,4 +344,3 @@
     }
   }
 }
-
