--- a/web/packages/workspace/i18n/zh.json
+++ b/web/packages/workspace/i18n/zh.json
@@ -72,7 +72,94 @@
       "feedback": "反馈",
       "workspaceTitle": "工作空间——",
       "permissions": "部门和用户管理",
-      "managementPlatform": "管理台"
+      "managementPlatform": "管理台",
+      "Staytuned": "敬请期待",
+      "Documents2": "产品文档",
+      "Knowledge": "知识库",
+      "DepAndUser": "部门和用户管理",
+      "Department": "部门管理",
+      "UserManage": "用户管理",
+      "AddComp": "新增组件",
+      "ComponentAccess": "组件接入",
+      "UpdateSucc": "更新成功",
+      "Update": "更新失败",
+      "AddSucc": "新增成功",
+      "AddFail": "新增失败",
+      "Management": "管理",
+      "All": "所有项目",
+      "Individual": "个人项目",
+      "Shared": "共享项目",
+      "Deleted": "已删除项目",
+      "Simultaneously": "同步删除所有第三方系统的工程",
+      "Project": "工程",
+      "Not": "不可重复",
+      "User": "用户类型",
+      "Real": "实名用户",
+      "Non": "非实名用户",
+      "Operation": "操作",
+      "CopySucc": "复制请求发送成功",
+      "Prompt": "提示",
+      "Copying": "复制中",
+      "Pleasewait": "请稍候",
+      "Delete": "删除",
+      "Configuration": "配置",
+      "Copy": "复制",
+      "AccessCategories": "接入类别",
+      "Component": "组件",
+      "ApplicationName": "应用名",
+      "ApplicationEnName": "应用名英文",
+      "Homepage": "首页",
+      "Projectpage": "项目页",
+      "Singleinter": "单点接口",
+      "Activate": "激活",
+      "Description": "描述",
+      "Pleaseinputdesc": "请输入描述",
+      "Engilish": "英文描述",
+      "Pleaseenputendesc": "请输入英文描述",
+      "Cancel": "取消",
+      "Submit": "提交",
+      "Access": "接入类别不能为空",
+      "AppnameEmpty": "应用名不能为空",
+      "ApplicationEnNameEmpty": "应用名英文不能为空",
+      "Cannotempty": "不能为空",
+      "Home": "首页不能为空",
+      "ProjectEmpty": "项目页不能为空",
+      "DescriptionEmpty": "描述不能为空",
+      "EnDescEmpty": "英文描述不能为空",
+      "Savesucc": "保存成功",
+      "Uploadfailed": "上传失败",
+      "ListallNode": "查看全部节点",
+      "readonly": "只看",
+      "Node": "节点",
+      "AddPage": "添加页面",
+      "Documents": "文档",
+      "docpathinput": "请输入文档path，path以/开头",
+      "DocumentName": "文档名称",
+      "inputdocName": "请输入文档名称",
+      "Document": "文档描述",
+      "Path": "所属路径",
+      "NodeType": "节点类型",
+      "Step": "步骤",
+      "Problem": "问题",
+      "Content": "内容标题",
+      "inputTitle": "请输入标题",
+      "Titlealias": "标题别名",
+      "Title": "标题前缀",
+      "Confirm": "确认",
+      "pathformat": "和斜线",
+      "alreadyexist": "已经存在",
+      "chooseNodeType": "请选择节点类型",
+      "ConfirmDel": "确认删除吗",
+      "Therecontents": "该页面还有所属内容，不能删除",
+      "Edit": "修改",
+      "Add": "新增",
+      "AddDir": "添加目录",
+      "DirectoryName": "目录名称",
+      "Please": "请输入目录名称",
+      "Directory": "目录",
+      "NodeTitle": "节点标题",
+      "Cannot": "该目录下还有所属内容，不能删除",
+      "Console": "控制台"
     },
     "workspaceManagement": {
       "waring": "警告",
@@ -254,8 +341,6 @@
       "modifyPwdSuccess": "修改密码成功！",
       "pwdCheckError": "以字母开头，必须含有大小写字母、数字和特殊字符，且8到26位",
       "pwdKeyboardError": "不能连续三位是键盘序，例如含有123,987,abc,cba,qwe,poi之类的字符"
-
     }
   }
 }
-
