--- a/web/packages/workflows/i18n/common/zh.json
+++ b/web/packages/workflows/i18n/common/zh.json
@@ -391,7 +391,7 @@
       "CopyWrokflow": "复制工作流",
       "Original": "被复制工作流",
       "CopyProj": "复制到项目",
-      "Copied": "复制后工作流",
+      "Copied": "复制后工作流名",
       "Node": "节点后缀",
       "WorkflowSameName": "同一项目中工作流节点重名会导致工作流发布失败，请考虑好节点后缀名再填写，若因重名问题导致发布失败，用户需手动修改对应工作流节点名称",
       "autosuffix": "填写后将自动为工作流节点名添加该后缀",
