bdp project manage

--- a/web/packages/workflows/i18n/common/en.json
+++ b/web/packages/workflows/i18n/common/en.json
@@ -473,8 +473,8 @@
       "menu": "Menu",
       "setting": "Setting",
       "createOrchestrator": "Create orchestrator",
-      "deleteOrchestrator": "Delete orchestrator modes",
-      "confirmDeleteOrchestrator": "Confirm deletion of orchestrator mode:",
+      "deleteOrchestrator": "Delete orchestrator",
+      "confirmDeleteOrchestrator": "Confirm deletion of orchestrator:",
       "orchestratorPublish": "orchestrator publish",
       "publishLoading": "There is already an orchestrator in publishing, please try again later",
       "modeifyOrchestrator": "Modify orchesstrator",
