--- a/web/packages/workflows/i18n/common/zh.json
+++ b/web/packages/workflows/i18n/common/zh.json
@@ -474,8 +474,8 @@
       "menu": "菜单",
       "setting": "设置",
       "createOrchestrator": "新建工作流",
-      "deleteOrchestrator": "删除工作流模式",
-      "confirmDeleteOrchestrator": "确认删除工作流模式：",
+      "deleteOrchestrator": "删除工作流",
+      "confirmDeleteOrchestrator": "确认删除工作流：",
       "orchestratorPublish": "工作流发布",
       "publishLoading": "已有工作流在发布，稍后再试",
       "modeifyOrchestrator": "修改工作流",
