--- a/web/packages/scriptis/i18n/common/en.json
+++ b/web/packages/scriptis/i18n/common/en.json
@@ -747,11 +747,8 @@
       "user": "User",
       "downloadpath": "Download path",
       "proxyuser": "Current proxy user：",
-      "notsaved": "The code being edited is not saved",
-      "check": "Please check",
-      "confirmcheck": "Click confirm to check",
-      "cancelsave": "Click cancel without saving",
-      "continue": "Continue to jump",
+      "notsaved": "The code being edited is not saved, please check",
+      "confirmcheck": "Click confirm to check, Click cancel without saving, Continue to jump",
       "folder": "Folder",
       "view": "View",
       "table": "Table",
