--- a/web/packages/scriptis/i18n/common/zh.json
+++ b/web/packages/scriptis/i18n/common/zh.json
@@ -746,11 +746,8 @@
       "user": "用户",
       "downloadpath": "下载路径",
       "proxyuser": "当前代理用户：",
-      "notsaved": "正在编辑的代码未保存",
-      "check": "请先检查",
-      "confirmcheck": "点击确定去检查",
-      "cancelsave": "点击取消不保存",
-      "continue": "继续跳转",
+      "notsaved": "正在编辑的代码未保存，请先检查",
+      "confirmcheck": "点击确定去检查，点击取消不保存，继续跳转",
       "folder": "文件夹",
       "view": "视图",
       "table": "表",
