add  router change hook

--- a/web/packages/scriptis/i18n/common/zh.json
+++ b/web/packages/scriptis/i18n/common/zh.json
@@ -756,7 +756,9 @@
       "dbdetail": "库详情",
       "Settings": "设置",
       "proxytip": "请选择代理用户进入或者取消",
+      "operateProxyTip": "请选择代理用户进入或者取消",
       "applyporxy": "请先申请实名用户允许的代理用户",
+      "applyOperatePorxy": "请先申请实名用户允许的代理用户",
       "confirm": "确定",
       "propmpt": "提示",
       "largedatatip": "库表数据量较大可能导致编写脚本时卡顿，可在编辑器右键菜单选择关闭库表联想解决",
