clear event listener

--- a/web/packages/workflows/i18n/common/en.json
+++ b/web/packages/workflows/i18n/common/en.json
@@ -427,8 +427,7 @@
       "SelectRun": "Select and run",
       "Rerun": "Rerun",
       "Prompt": "Prompt",
-      "Copying": "Copying",
-      "Notalledit": "Not allowed to edit the script",
+      "Copying": "Copying，Not allowed to edit the script",
       "Save": "Save script",
       "Manually": "Manually save",
       "AddNode": "Add node",
