--- a/web/packages/workflows/i18n/common/zh.json
+++ b/web/packages/workflows/i18n/common/zh.json
@@ -428,8 +428,7 @@
       "SelectRun": "选中执行",
       "Rerun": "失败重跑",
       "Prompt": "提示",
-      "Copying": "复制过程中",
-      "Notalledit": "不允许编辑工作流",
+      "Copying": "复制过程中,不允许编辑工作流",
       "Save": "保存脚本",
       "Manually": "手动保存",
       "AddNode": "新增节点",
