--- a/web/packages/exts/open-source/i18n/en.json
+++ b/web/packages/exts/open-source/i18n/en.json
@@ -71,7 +71,9 @@
           "publishSuccess": "Publish Success"
         },
         "tagPlaceholder": "tag，click enter add"
-      }
+      },
+      "operateProxyTip": "Before entering, please select a proxy user or cancel",
+      "applyOperatePorxy": "Please apply for a proxy user first"
     },
     "ext": {
       "opensource": {
