fix dark theme style & user auto join to workspace

--- a/web/packages/workspace/i18n/en.json
+++ b/web/packages/workspace/i18n/en.json
@@ -183,6 +183,9 @@
       "department": "Department",
       "office": "Office",
       "creator": "Creator",
+      "autojoin": "Auto Join",
+      "addUserJoin": "Auto join setting",
+      "autojointip": "Workspace administrators can set new users to be automatically added to the workspace when they login to DSS for the first time",
       "joinTime": "Join Time",
       "action": "Action",
       "notDeleteMsg": "The current login role cannot be deleted",
