--- a/web/packages/workspace/i18n/zh.json
+++ b/web/packages/workspace/i18n/zh.json
@@ -183,6 +183,9 @@
       "department": "部门",
       "office": "科室",
       "creator": "创建人",
+      "autojoin": "用户自动加入",
+      "addUserJoin": "设置用户自动加入",
+      "autojointip": "工作空间管理员可设置新用户在第一次登陆DSS时，自动加入到工作空间",
       "joinTime": "加入时间",
       "action": "操作",
       "notDeleteMsg": "不可删除当前登入角色",
