--- a/web/packages/workflows/i18n/common/zh.json
+++ b/web/packages/workflows/i18n/common/zh.json
@@ -399,6 +399,7 @@
       "PleaseInputName": "请输入名称",
       "selcProj": "请选择项目",
       "Copyreq": "复制请求发送成功",
+      "CopySucceed": "复制成功",
       "Project": "项目",
       "AllProj": "所有项目",
       "Individual": "个人项目",
