--- a/web/packages/workspace/i18n/zh.json
+++ b/web/packages/workspace/i18n/zh.json
@@ -273,7 +273,10 @@
         "admin": "管理员：",
         "status": "状态：",
         "desc": "描述：",
-        "workspaceType": "工作空间类型："
+        "workspaceType": "工作空间类型：",
+        "adminviewall": "管理员可查看工作空间内所有项目",
+        "yes": "是",
+        "no": "否"
       },
       "JdbcUrlFormat": "请输入URL，例：jdbc:mysql://ServerIP:Port/Database"
     },
